manifests/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-consumer
  namespace: smap
  labels:
    app.kubernetes.io/name: identity-consumer
    app.kubernetes.io/part-of: smap
    app.kubernetes.io/component: consumer
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: identity-consumer
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: identity-consumer
        app.kubernetes.io/name: identity-consumer
        app.kubernetes.io/part-of: smap
    spec:
      imagePullSecrets:
        - name: zot-registry
      containers:
        - name: identity-consumer
          image: 172.16.21.10:5000/smap/identity-consumer:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
